--- a/indexform.html
+++ b/indexform.html
@@ -2,22 +2,35 @@
 <html>
 <head>
 	<title>Form</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
 </head>
+<style type="text/css">
+	body{
+		font-size: 120%;
+	}
+	h1{
+		color: brown;
+		text-align: center;
+	}
+	form{
+		line-height: 150%;
+		text-align: center;
+	}
+</style>
 <body>
 	<h1>FORM</h1>
 	<form>
-		FirstName<input type="text"><br>
-		LastName<input type="text"><br>
-		Gender:<br>
-		<div>
-			Male<input type="radio" name="radio">
-			Female<input type="radio" name="radio">
-			RatherNotsay<input type="radio" name="radio">
-		</div>
-		
+		<b>FirstName </b><input type="text"><br>
+		<b>LastName </b><input type="text"><br>
+		<strong>Gender:</strong><br>
+				Male<input type="radio" name="radio">
+				Female<input type="radio" name="radio">
+				RatherNotsay<input type="radio" name="radio"><br>	
 		<button type="submit">Submit</button>
 		<button type="reset">Reset</button>
 
 	</form>
 </body>
+
 </html>
