--- a/indexform.html
+++ b/indexform.html
@@ -23,6 +23,7 @@
 	<form>
 		<b>FirstName </b><input type="text"><br>
 		<b>LastName </b><input type="text"><br>
+		<b>DateOfBirth </b><input type"date"> <br>
 		<strong>Gender:</strong><br>
 				Male<input type="radio" name="radio">
 				Female<input type="radio" name="radio">
